# rust-image-resize-clone

./: .gitignore  README.md  Vagrantfile
bin_lambda_resize/: Cargo.toml
bin_lambda_resize/src/: config.rs  main.rs
rust_image_mutater/: Cargo.toml
rust_image_mutater/src/: main.rs
