[package]
name = "bin_lambda_resize"
version = "0.1.0"
authors = ["Elias Roussos <eliasisaiah@outlook.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
simple_logger = "1.6.0"
aws_lambda_events = "0.3.0"
rust-s3 = "0.22.10"
image = "0.23.6"
rayon = "1.3.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"